Implementando testes para o EmpresaService